<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mail_image"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:src="@drawable/ic_mail2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="57dp"
        android:layout_marginStart="25dp"
         />

    <TextView
        android:id="@+id/awesome"
        android:layout_width="300dp"
        android:layout_height="31dp"
        android:layout_marginTop="11dp"
        android:layout_marginStart="25dp"

        android:text="@string/register5"
        android:fontFamily="@font/Lato_Light"
        android:textColor="#000000"
        android:textSize="26sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mail_image" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="155dp"
        android:layout_height="38dp"
        android:layout_marginTop="11dp"
        android:layout_marginStart="25dp"
        android:text="@string/register6"
        android:fontFamily="@font/Lato_Regular"
        android:textColor="#4356B4"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/awesome"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="42dp"
        android:layout_height="17dp"
        android:layout_marginTop="61dp"
        android:layout_marginStart="25dp"
        android:text="@string/register3"
        app:layout_constraintTop_toBottomOf="@id/login_text"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="355dp"
        android:layout_height="45dp"

        android:layout_marginStart="25dp"
        android:hint="@string/register7"
        android:drawableEnd="@drawable/ic_email"
        app:layout_constraintTop_toBottomOf="@id/email_text"
        app:layout_constraintLeft_toLeftOf="parent"

        />

    <TextView
        android:id="@+id/pass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="25dp"
        android:text="@string/register4"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintLeft_toLeftOf="parent"
         />


    <EditText
        android:id="@+id/pass"
        android:layout_width="358dp"
        android:layout_height="51dp"
        android:layout_marginStart="25dp"
        android:drawableEnd="@drawable/ic_key"
        android:hint="@string/register8"
        app:layout_constraintTop_toBottomOf="@id/pass_text"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/quen_pass"
        android:layout_width="103dp"
        android:layout_height="17dp"
        android:layout_marginTop="15dp"
        android:textColor="#4356B4"
        android:text="@string/register9"
        android:fontFamily="@font/Lato_Bold"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/register6"
        android:background="@drawable/bg_search"
        android:fontFamily="@font/Lato_Bold"
        app:cornerRadius="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quen_pass" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">

        <TextView
            android:id="@+id/chua_tk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register10"
            android:textColor="#999999"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register11"
            android:textColor="#4356B4"
            android:textSize="14sp"
            android:layout_toEndOf="@id/chua_tk"
            />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>